# tmvec-bench

./: .gitignore  README.md  core  old_README.md  pyproject.toml  requirements.txt
binaries/: tm_vec_cath_model_params.json
data/: cath-dataset-nonredundant-S40.list  cath-domain-list-S35.txt  cath-domain-list-S60.txt  cath-top1k.fa
data/experiments/: foundational_train_time_comp.csv
data/fasta/: cath-domain-seqs-S100-1k.fa  scope40-1000.fa  scope40-2500.fa
results/: cath_foldseek_similarities.csv  foldseek_benchmark_config.json  foldseek_query_times.csv  knn_cath_classification.csv  knn_cath_classification_S100.csv  knn_cath_classification_S35.csv  knn_false_positive_benchmark.csv  knn_false_positive_test.csv  scope40_foldseek_similarities.csv  tmvec1_encoding_times.csv  tmvec1_query_times.csv  tmvec2_benchmark_config.json  tmvec2_encoding_times.csv  tmvec2_query_times.csv  tmvec2_student_benchmark_config.json
scripts/: download_cath_pdbs.py  foldseek.sh  tmalign.sh  tmvec-student.sh  tmvec1.sh  tmvec2.sh  tmvec2_student.sh
src/benchmarks/: foldseek.py  knn_cath_classifier.py  tmalign.py  tmvec1.py  tmvec2.py  tmvec2_student.py  tmvec_2.py  tmvec_student.py
src/inference_time_benchmark/: Albert.csv  Albert_results.json  Ankh.csv  Ankh_results.json  FAEsm_results.json  FAesm.csv  Lobster_150M_results.csv  Lobster_150M_results.json  Lobster_24M_results.csv  Lobster_24M_results.json  Mamba.csv  Mamba_results.json  T5XL.csv  T5XL_results.json  XLNet.csv  XLNet_results.json  bench_graphs.ipynb  runtime_bench.ipynb  runtime_bench.py
src/model/: student_model.py  (+3 more)
(+64 files in other folders)
